<resources>
    <string name="app_name">Gestao-Mobile</string>
    <string name="btnRegistro">Registrase</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="etnombre1">Ingresa tu nombre</string>
    <string name="errorDocente">El docente seleccionado no se encuentra !</string>
    <string name="etnombre2">Ingresa tu segundo nombre</string>
    <string name="etapellido1">Ingresa tu apellido</string>
    <string name="errorLogin">Usuario o Contraseña Incorrectos !</string>
    <string name="campoNoNulo">Este campo no puede ser nulo !</string>
    <string name="claveNoIgual">Las claves deben coincidir !</string>
    <string name="claveNoCaracter">Las claves deben tener almenos 8 caracteres</string>
    <string name="etapellido2">Ingresa tu segundo apellido</string>
    <string name="etpass">ingresa tu clave</string>
    <string name="etcorreo">Tucorreo@mail.com</string>
    <string name="estudiante">Estudiante</string>
    <string name="docente">Docente</string>
    <string name="correoInvalido">Correo Invalido</string>
    <string name="ingresar">Ingresar</string>
    <string name="registroExitoso">Registro Exitoso !</string>
    <string name="errorConexion">Ha ocurrido un error de conexion</string>
    <string name="Registrarse"><u>Registrarse</u></string>
    <string name="claveConfirm">Confirma tu clave de acceso</string>
    <string name="escanear">Escanear</string>
    <string name="vincular">Vincular clases</string>
    <string name="horario">Mi horario</string>
    <string name="reservar">Reservar clase</string>
    <string name="profesores">Mis profesores</string>
    <string name="ingreseLaHoraInicial">Ingrese la hora inicial</string>
    <string name="ingreseLaHoraFinal">Ingrese la hora final</string>
    <string name="diaSemana">Dia de la semana</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="errorNoClases">No se encontraron clases para este docente!</string>
    <string name="erroNoDocente">No se encontro informacion del docente!</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="horaInicialIntervalo">La hora inicial debe estar entre las 7 y las 21 horas</string>
    <string name="horaFinalIntervalo">La hora final debe estar entre las 8 y las 22 horas</string>
    <string name="clase">Clase</string>
    <string name="clasen"><u> Clase: </u></string>
    <string name="nombreProfesor">Nombre del docente</string>
    <string name="consultar">Consultar</string>
    <string name="crearClase">Crear clase</string>
    <string name="nombreClase">Ingresa el nombre de la clase</string>
    <string name="unirmeClase">Unirme a clase</string>
    <string name="vinculacionClase">Vinculación clase</string>
    <string name="vinculacionAceptacion">¿Esta seguro de vincularse a la clase %1$s ?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sala">Sala</string>
    <string name="horas">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="ingresaCodigo">Ingresa tu código</string>
    <string name="ingresaNombre1">Ingresa tu primer nombre</string>
    <string name="ingresaNombre2">Ingresa tu segundo nombre</string>
    <string name="ingresaApellido1">Ingresa tu primer apellido</string>
    <string name="ingresaApellido2">Ingresa tu segundo apellido</string>
    <string name="ingresaUrlFacebook">Ingresa tu direccion de perfil de facebook</string>
    <string name="ingresaUrlTwitter">Ingresa la direccion de tu pagina de twitter</string>
    <string name="ingresaDescripcion">Ingresa algo sobre ti</string>
    <string name="ingresaCorreo">Ingresa tu correo</string>
    <string name="ingresaTelefono">Ingresa tu número telefonico</string>
    <string name="ingresaSemestre">Ingresa tu semestre actual</string>
    <string name="actualizar">Actualizar</string>
    <string name="urlInvalida">La url ingresada no es valida</string>
    <string name="semestreInvalido">El semestre ingresado no es valido</string>
    <string name="numeroTelefonicoInvalido">El numero telefonico ingresado no es valido</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="noClaseSeleccionada">No se ha seleccionado ninguna clase</string>
    <string name="unaSolaVez">Una sola vez</string>
    <string name="todoElSemestre">Todo el semestre</string>
    <string name="ocurrencias">Ocurrencias</string>
    <string name="ingresaCodigoClase">Ingresa el codigo de la nueva clase</string>
    <string name="ingresaNombreClase">Ingresa el nombre de la clase</string>
    <string name="ingresaGrupoClase">Ingresa el grupo de la clase</string>
    <string name="ingresaNumeroCreditos">Ingresa el numero de creditos</string>
    <string name="ingresaSemestre2">Ingresa el semestre al cual pertenece la clase</string>
    <string name="ingreseCantidadEstudiantes">Ingrese el numero de estudiantes en la clase</string>
    <string name="ingreseRequerimientos">Ingrese los requerimientos de la clase</string>
    <string name="cantidadNoValida">Cantidad  no valida</string>
    <string name="hora">Hora</string>
    <string name="aula">Aula</string>
    <string name="actualmente">Actualmente</string>
    <string name="claseNoExistente">Esta clase no existe</string>
    <string name="docenteNoHaRegistradoRecurso">El docente no ha registrado este recurso</string>
    <string name="servidorNoAlcanzable">No se logro conectar con el servidor</string>
    <string name="peticionDocenteRegistro">Peticion de registro de docente realizada al administrador de salas</string>
    <string name="docenteNoConfirmado">Su registro como docente no ha sido confirmado por el administrador, por favor intente mas tarde.</string>
    <string name="olvideContrasena"><i><u>Olvide mi contraseña</u></i></string>
    <string name="enviar">Enviar</string>
    <string name="ingresaCodigoCorreo">Ingresa el codigo generado</string>
    <string name="recuperarContrasena">Recuperar contraseña</string>
    <string name="FCM_PREF">com.gestao.udec.gestao_mobile.fcm_pref</string>
    <string name="FCM_TOKEN">com.gestao.udec.gestao_mobile.fcm_token</string>
    <string name="irPaginaWeb">Ir a nuestro sitio</string>
    <string name="contactanos">Contactanos</string>
    <string name="udecVirtual">Ir a udec virtual</string>
    <string name="plataformaUdec">Ir a portal institucional</string>
    <string name="cerrarSesion">Cerrar sesion</string>
    <string name="notasUdec">Plataforma udec</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_horario">HorarioActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="misSalas">Mis salas</string>
    <string name="escogeSalaHorario">Escoge la sala la cual quieres visualizar horario</string>
    <string name="mostrarHorario">Mostrar horario</string>
    <string name="title_activity_salas_horario">SalasHorarioActivity</string>
    <string name="diaNoDefinido">Dia no definido</string>
    <string name="informacionPersonal"><i>Informacion personal:</i></string>
    <string name="siguientesClasesDelDocente"><i>Siguientes clases del docente:</i></string>
    <string name="tuSiguienteClaseEn"><i>Tu siguiente clase:</i></string>
    <string name="siguientesClasesEnEstaSala"><i>Siguientes clases en esta sala:</i></string>
    <string name="fotoPerfil">Cambiar foto perfil</string>
    <string name="ingreseObservacionClase">Ingrese las observaciones para la clase</string>
    <string name="observacion">Observación</string>
    <string name="noTienesClaseAEstaHora">No tienes clase a esta hora</string>
    <string name="profesor">Docente</string>
    <string name="horaInicio">Hora inicio</string>
    <string name="horaFinal">Hora final</string>
    <string name="observaciones">Observaciones</string>
    <string name="yaMismoEn">Ya mismo en</string>
    <string name="en">en</string>
    <string name="minutos">minutos</string>
    <string name="horasMin">horas</string>
    <string name="hoyNoTienesNingunaClase">hoy no tienes ninguna clase!</string>
    <string name="noHayObservaciones">No hay observaciones</string>
    <string name="noSeEncontraronClasesParaEstaAula">No se encontraron clases para esta aula</string>
    <string name="vacioActualmente">Vacio actualmente!</string>
    <string name="docenteNoEncontrado">docente no encontrado!</string>
    <string name="actualmenteMay">ACTUALMENTE!</string>
    <string name="campoLetras">Este campo solo acepta letras</string>
    <string name="intervaloIncorrecto">Intervalo de horas incorrecto</string>

</resources>
