<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_escanear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gestao.udec.gestao_mobile.EscanearActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvfecha"
                android:layout_weight="1" />

            <TextView
                android:text="@string/hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvhora"
                android:layout_weight="1" />

            <TextView
                android:text="@string/aula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvaula"
                android:layout_weight="1" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:id="@+id/tlclases">

        </TableLayout>

    </LinearLayout>
</RelativeLayout>
